# bibliotheca

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bibliotheca.cpp  test.cpp  word.cpp
include/: bibliotheca.h  word.h
